--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <button id="btn-q-high" class="q-btn active">ALTA</button>
         <button id="btn-q-med" class="q-btn">MEDIA</button>
         <button id="btn-q-low" class="q-btn">BAJA</button>
-        <label class="ao-label">
+        <label class="ao-label" style="display:none;">
             <input type="checkbox" id="ao-toggle"> AO (N8)
         </label>
     </div>
 
-    <div id="fog-ui" class="ui-element">
-        <label>DENSIDAD NIEBLA: <span id="fog-val">0.022</span></label>
-        <input type="range" id="fog-slider" min="0" max="0.1" step="0.001" value="0.022">
+    <div id="fog-ui" class="ui-element" style="display:none;">
+        <label>DENSIDAD NIEBLA: <span id="fog-val">0.018</span></label>
+        <input type="range" id="fog-slider" min="0" max="0.1" step="0.001" value="0.018">
     </div>
 
     <div id="debug-ui" class="ui-element">
