--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://unpkg.com/tone@14.7.77/build/Tone.js"></script>
 </head>
-<body>
+<body class="faded-out">
     <div id="fade-overlay"></div>
 
     <div id="quality-hud" class="ui-element">
@@ -63,3 +63,4 @@
     <script type="module" src="./js/main.js"></script>
 </body>
 </html>
+        
